--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-    crossorigin="anonymous" />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/f4df27ac48.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="icon" href="/images/NA.png" type="image/x-icon">
+<link rel="shortcut icon" href="/images/NA.png" type="image/x-icon">
     <link rel="stylesheet" href="src/styles.css" />
     <title>Néstor Altuve Links</title>
 </head>
@@ -46,13 +39,12 @@
             <h2>Medios Informativos e Inteligencia Artificial</h2>
             <h3>#TD_Medios + #TD_IA</h3>
             <p>
-              Cura información general acerca del tema de la transformación
-              digital en todas las industrias
+              Hashtag que filtra contenidos de Transformación Digital de Medios enfocado en la IA
             </p>
   
             <div class="posts">
               <a
-                href=" https://www.linkedin.com/search/results/content/?datePosted=%22past-month%22&keywords=%22%23TD_Medios%2B%23TD_IA%22&origin=FACETED_SEARCH&sid=biZ&sortBy=%22date_posted%22"
+                href="https://tinyurl.com/57xxd8b6"
                 target="_blank"
                 >Ver Publicaciones</a
               >
@@ -60,7 +52,28 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-0">
+        </div>
+        <div class="social-links d-flex justify-content-center mb-4">
+          <div class="social-media">  <a href="https://www.facebook.com/nestoraltuve" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a></div>
+          <div class="social-media">   <a href="https://x.com/viamultimedia" target="_blank">
+            <i class="fa-brands fa-twitter"></i
+          ></a></div>
+          <div class="social-media"><a
+            href="https://www.linkedin.com/in/nestoraltuve/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a></div>
+        </div>
+        <div class="user pb-5">nestoraltuve</div>
+       
+      </footer>
+      
       <script src="/src/index.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
 
