--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="/images/LogoNApng.png" alt="NA-logo" class="logo" />
         <h1>La Inteligencia Artificial y los Medios Informativos By </h1>
         <h1><a class="hiperlink" href="https://nestoraltuve.com/" target="_blank">#NéstorAltuve</a></h1>
-        <h2 class="text-white"><strong>Contenido propio y curado en LinkedIn</strong></h2>
+        <h2 class="title-content text-white"><strong>Contenido propio y curado en LinkedIn</strong></h2>
       </div>
       <div class="container">
         <select
